<resources>
    <string name="app_name">Avaliacao Maxima</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="legendas">Legendas</string>
    <string name="dados">Dados</string>
    <string name="pedidos">Pedidos</string>
    <string name="alvara">Alvará</string>
    <string name="status_do_pedido_no_erp">Status do pedido no ERP</string>
    <string name="em_processamento_por_parte_do_fv">Em processamento por parte do FV</string>
    <string name="icon_alert">!</string>
    <string name="pedido_recusado_pelo_erp">Pedido Recusado pelo ERP</string>
    <string name="icon_pendente">P</string>
    <string name="posicao_no_erp_pendente">Posição no ERP Pendente</string>
    <string name="icon_bloqueado">B</string>
    <string name="posi_o_no_erp_bloqueado">Posição no ERP Bloqueado</string>
    <string name="icon_liberado">L</string>
    <string name="posicao_no_erp_liberado">Posição no ERP Liberado</string>
    <string name="icon_montado">M</string>
    <string name="posicao_no_erp_montado">Posição no ERP Montado</string>
    <string name="icon_faturado">F</string>
    <string name="posicao_no_erp_faturado">Posição no ERP Faturado</string>
    <string name="icon_cancelado">C</string>
    <string name="posicao_no_erp_cancelado">Posição no ERP Cancelado</string>
    <string name="icon_orcamento">O</string>
    <string name="orcamento">Orçamento</string>
    <string name="critica">Crítica</string>
    <string name="aguardando_retorno_do_erp">Aguardando retorno do ERP</string>
    <string name="sucesso">Sucesso</string>
    <string name="falha_parcial">Falha parcial</string>
    <string name="falha_total">Falha total</string>
    <string name="pedido_com_corte">Pedido com corte</string>
    <string name="pedido_com_falta">Pedido com falta</string>
    <string name="pedido_cancelado_no_erp">Pedido Cancelado no ERP</string>
    <string name="pedido_com_devolucao">Pedido com devolução</string>
    <string name="pedido_feito_pelo_telemarketing">Pedido feito pelo telemarketing</string>
    <string name="n_ped_rca_erp">N° Ped. RCA/ERP:</string>
    <string name="divisor">/</string>
    <string name="cliente">Cliente:</string>
    <string name="critica_">Crítica:</string>
    <string name="rs">R$</string>
    <string name="telefone">Telefone:</string>
    <string name="celular">Celular:</string>
    <string name="conjuge">Cônjuge:</string>
    <string name="tipo">Tipo:</string>
    <string name="hobbie">Hobbie:</string>
    <string name="e_mail">E-mail:</string>
    <string name="data_nasc">Data Nasc.:</string>
    <string name="data_nasc_conjuge">Data Nasc. Cônjuge:</string>
    <string name="time">Time:</string>
    <string name="dados_do_cliente">Dados do cliente</string>
    <string name="contatos">Contatos</string>
    <string name="verificar_status_do_cliente">Verificar status do cliente</string>
    <string name="nada_encontrado">Nada encontrado...</string>
    <string name="nao_ha_alvara">Não há alvarás para exibir, \nverifique com o responsável pelo ERP</string>
    <string name="versao">v.1.0.0</string>
</resources>