<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/legendas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitleStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status_do_pedido_no_erp"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <ImageView
            android:id="@+id/imgProcessamento"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_processamento"
            android:src="@drawable/ic_maxima_em_processamento"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/subtitleStatus" />

        <TextView
            android:id="@+id/tvProcessamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/em_processamento_por_parte_do_fv"
            app:layout_constraintBottom_toBottomOf="@id/imgProcessamento"
            app:layout_constraintStart_toEndOf="@id/imgProcessamento"
            app:layout_constraintTop_toTopOf="@id/imgProcessamento" />

        <TextView
            android:id="@+id/icRecusado"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_recusado"
            android:gravity="center"
            android:text="@string/icon_alert"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/imgProcessamento" />

        <TextView
            android:id="@+id/tvRecusado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pedido_recusado_pelo_erp"
            app:layout_constraintBottom_toBottomOf="@id/icRecusado"
            app:layout_constraintStart_toEndOf="@id/icRecusado"
            app:layout_constraintTop_toTopOf="@id/icRecusado" />

        <TextView
            android:id="@+id/icPendente"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_pendente"
            android:gravity="center"
            android:text="@string/icon_pendente"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/icRecusado" />

        <TextView
            android:id="@+id/tvPendente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/posicao_no_erp_pendente"
            app:layout_constraintBottom_toBottomOf="@id/icPendente"
            app:layout_constraintStart_toEndOf="@id/icPendente"
            app:layout_constraintTop_toTopOf="@id/icPendente" />

        <TextView
            android:id="@+id/icBloqueado"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_bloqueado"
            android:gravity="center"
            android:text="@string/icon_bloqueado"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/icPendente" />

        <TextView
            android:id="@+id/tvBloqueado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/posi_o_no_erp_bloqueado"
            app:layout_constraintBottom_toBottomOf="@id/icBloqueado"
            app:layout_constraintStart_toEndOf="@id/icBloqueado"
            app:layout_constraintTop_toTopOf="@id/icBloqueado" />

        <TextView
            android:id="@+id/icLiberado"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_liberado"
            android:gravity="center"
            android:text="@string/icon_liberado"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/icBloqueado" />

        <TextView
            android:id="@+id/tvLiberado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/posicao_no_erp_liberado"
            app:layout_constraintBottom_toBottomOf="@id/icLiberado"
            app:layout_constraintStart_toEndOf="@id/icLiberado"
            app:layout_constraintTop_toTopOf="@id/icLiberado" />

        <TextView
            android:id="@+id/icMontado"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_montado"
            android:gravity="center"
            android:text="@string/icon_montado"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/icLiberado" />

        <TextView
            android:id="@+id/tvMontado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/posicao_no_erp_montado"
            app:layout_constraintBottom_toBottomOf="@id/icMontado"
            app:layout_constraintStart_toEndOf="@id/icMontado"
            app:layout_constraintTop_toTopOf="@id/icMontado" />

        <TextView
            android:id="@+id/icFaturado"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_faturado"
            android:gravity="center"
            android:text="@string/icon_faturado"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/icMontado" />

        <TextView
            android:id="@+id/tvFaturado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/posicao_no_erp_faturado"
            app:layout_constraintBottom_toBottomOf="@id/icFaturado"
            app:layout_constraintStart_toEndOf="@id/icFaturado"
            app:layout_constraintTop_toTopOf="@id/icFaturado" />

        <TextView
            android:id="@+id/icCancelado"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_cancelado"
            android:gravity="center"
            android:text="@string/icon_cancelado"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/icFaturado" />

        <TextView
            android:id="@+id/tvCancelado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/posicao_no_erp_cancelado"
            app:layout_constraintBottom_toBottomOf="@id/icCancelado"
            app:layout_constraintStart_toEndOf="@id/icCancelado"
            app:layout_constraintTop_toTopOf="@id/icCancelado" />

        <TextView
            android:id="@+id/icOrcamento"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_orcamento"
            android:gravity="center"
            android:text="@string/icon_orcamento"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/icCancelado" />

        <TextView
            android:id="@+id/tvOrcamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/orcamento"
            app:layout_constraintBottom_toBottomOf="@id/icOrcamento"
            app:layout_constraintStart_toEndOf="@id/icOrcamento"
            app:layout_constraintTop_toTopOf="@id/icOrcamento" />

        <TextView
            android:id="@+id/subtitleCritica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/critica"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/icOrcamento" />

        <ImageView
            android:id="@+id/imgAguardando"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_maxima_aguardando_critica"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/subtitleCritica" />

        <TextView
            android:id="@+id/tvAguardando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/aguardando_retorno_do_erp"
            app:layout_constraintBottom_toBottomOf="@id/imgAguardando"
            app:layout_constraintStart_toEndOf="@id/imgAguardando"
            app:layout_constraintTop_toTopOf="@id/imgAguardando" />

        <ImageView
            android:id="@+id/imgSucesso"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_maxima_critica_sucesso"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/imgAguardando" />

        <TextView
            android:id="@+id/tvSucesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sucesso"
            app:layout_constraintBottom_toBottomOf="@id/imgSucesso"
            app:layout_constraintStart_toEndOf="@id/imgSucesso"
            app:layout_constraintTop_toTopOf="@id/imgSucesso" />

        <ImageView
            android:id="@+id/imgFalhaParcial"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_maxima_critica_alerta"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/imgSucesso" />

        <TextView
            android:id="@+id/tvFalhaParcial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/falha_parcial"
            app:layout_constraintBottom_toBottomOf="@id/imgFalhaParcial"
            app:layout_constraintStart_toEndOf="@id/imgFalhaParcial"
            app:layout_constraintTop_toTopOf="@id/imgFalhaParcial" />

        <TextView
            android:id="@+id/imgFalhaTotal"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_cancelado"
            android:gravity="center"
            android:text="@string/icon_alert"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/imgFalhaParcial" />

        <TextView
            android:id="@+id/tvFalhaTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/falha_total"
            app:layout_constraintBottom_toBottomOf="@id/imgFalhaTotal"
            app:layout_constraintStart_toEndOf="@id/imgFalhaTotal"
            app:layout_constraintTop_toTopOf="@id/imgFalhaTotal" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/legendas"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/imgFalhaTotal" />

        <ImageView
            android:id="@+id/imgCorte"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_maxima_legenda_corte"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <TextView
            android:id="@+id/tvCorte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pedido_com_corte"
            app:layout_constraintBottom_toBottomOf="@id/imgCorte"
            app:layout_constraintStart_toEndOf="@id/imgCorte"
            app:layout_constraintTop_toTopOf="@id/imgCorte" />

        <ImageView
            android:id="@+id/imgFalta"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_maxima_legenda_falta"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/imgCorte" />

        <TextView
            android:id="@+id/tvFalta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pedido_com_falta"
            app:layout_constraintBottom_toBottomOf="@id/imgFalta"
            app:layout_constraintStart_toEndOf="@id/imgFalta"
            app:layout_constraintTop_toTopOf="@id/imgFalta" />

        <ImageView
            android:id="@+id/imgCanceladoErp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_maxima_legenda_cancelamento"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/imgFalta" />

        <TextView
            android:id="@+id/tvCanceladoErp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pedido_cancelado_no_erp"
            app:layout_constraintBottom_toBottomOf="@id/imgCanceladoErp"
            app:layout_constraintStart_toEndOf="@id/imgCanceladoErp"
            app:layout_constraintTop_toTopOf="@id/imgCanceladoErp" />

        <TextView
            android:id="@+id/imgDevolucao"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_maxima_legenda_devolucao"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/imgCanceladoErp" />

        <TextView
            android:id="@+id/tvDevolucao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pedido_com_devolucao"
            app:layout_constraintBottom_toBottomOf="@id/imgDevolucao"
            app:layout_constraintStart_toEndOf="@id/imgDevolucao"
            app:layout_constraintTop_toTopOf="@id/imgDevolucao" />

        <TextView
            android:id="@+id/imgTelemarketing"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_maxima_legenda_telemarketing"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/imgDevolucao" />

        <TextView
            android:id="@+id/tvTelemarketing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pedido_feito_pelo_telemarketing"
            app:layout_constraintBottom_toBottomOf="@id/imgTelemarketing"
            app:layout_constraintStart_toEndOf="@id/imgTelemarketing"
            app:layout_constraintTop_toTopOf="@id/imgTelemarketing" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>